# drf-api-deploy

./: docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
games/: models.py  permissions.py  serializer.py  urls.py  views.py
games/migrations/: 0001_initial.py
games_project/: asgi.py  settings.py  urls.py  wsgi.py
